--- a/app/src/main/res/layout/dialog_details.xml
+++ b/app/src/main/res/layout/dialog_details.xml
@@ -7,7 +7,7 @@
     android:padding="16dp">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
+        android:id="@+id/rvDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
