--- a/app/src/main/res/layout/item_superhero_shimmer.xml
+++ b/app/src/main/res/layout/item_superhero_shimmer.xml
@@ -2,7 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/materialCardView"
+    android:id="@+id/cvContainer"
     android:layout_width="150dp"
     android:layout_height="200dp"
     android:layout_marginStart="4dp"
@@ -24,7 +24,7 @@
         tools:layout_editor_absoluteY="0dp">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageView"
+            android:id="@+id/ivSuperHero"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -35,14 +35,14 @@
             android:background="@color/shimmer" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvSuperHero"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#E7E7E7"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="@+id/ivSuperHero"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="@+id/ivSuperHero"
             tools:layout_conversion_absoluteHeight="19dp"
             tools:layout_conversion_absoluteWidth="58dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
